feat(ux): Implement resource limits and global focus styling
This commit introduces robust limitations on user-creatable resources (environments, variables, tabs) to ensure application performance and stability. It also polishes the user interface by adding counters and implementing a consistent, global focus style for input elements.

Key Features & Changes:

1. Resource Limiting:
   - **Environments:** Capped at a maximum of 20. The UI now displays a counter (`(1/20)`) and shows a toast notification upon reaching the limit.
   - **Variables:** Limited to 50 per environment. The variable editor now displays a header with a counter (`Variables (5/50)`) and prevents adding new variables beyond the limit, showing a toast notification.
   - **Tabs:** Limited to 100 open tabs. The UI displays a counter, disables the "add tab" button, and shows a toast when the limit is reached.

2. UI & UX Enhancements:
   - Added counters to the Environment Manager for both environments and variables, providing clear feedback to the user.
   - Fixed a layout bug in the Environment Manager where the variable editor would be pushed down by a long list of environments. The environment list is now scrollable within its own container.
   - Refined the HTML response preview to gracefully handle content blocked by `X-Frame-Options` security headers, showing an informative message instead of a blank frame.

3. Global Styling Improvements:
   - Implemented a global CSS rule in `globals.css` to handle input focus (`:focus-visible`).
   - Removed the default browser `outline` and Tailwind's `ring` utility across all input fields.
   - Replaced it with a subtle `border-color` change to the primary theme color, creating a consistent and aesthetically pleasing focus indicator throughout the application while maintaining accessibility.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -97,7 +97,9 @@
         "variable_name_placeholder": "Variable name",
         "variable_value_placeholder": "Variable value",
         "login_prompt_title": "Login to Manage Environments",
-        "login_prompt_description": "Create and manage your environments after logging in."
+        "login_prompt_description": "Create and manage your environments after logging in.",
+        "variables_count_header": "Variables ({{count}}/{{max}})",
+        "environments_count_label": "environments"
     },
     "save_dialog": {
         "title": "Save Request",
@@ -168,7 +170,13 @@
         "update_share_name_error_title": "Error",
         "update_share_name_error_description": "Failed to update name.",
         "share_limit_reached_title": "Limit Reached",
-        "share_limit_reached_description": "You can only have {{max}} active shares. Please delete an old one."
+        "share_limit_reached_description": "You can only have {{max}} active shares. Please delete an old one.",
+        "tab_limit_reached_title": "Tab Limit Reached",
+        "tab_limit_reached_description": "You can open a maximum of {{max}} tabs.",
+        "env_limit_reached_title": "Environment Limit Reached",
+        "env_limit_reached_description": "You can create a maximum of {{max}} environments.",
+        "variable_limit_reached_title": "Variable Limit Reached",
+        "variable_limit_reached_description": "An environment can hold a maximum of {{max}} variables."
     },
     "share_page": {
         "create_your_own": "Create your own",
