feat(auth, ui): Implement Google OAuth and refactor header UI
This commit introduces Google as a new authentication provider and significantly refactors the main application header to improve clarity, reduce clutter, and enhance user experience.

Key Features & Changes:

1. Google Authentication:
   - Integrated Google OAuth as a new sign-in option, alongside the existing GitHub provider.
   - Configured the necessary credentials in Google Cloud Console and Supabase.
   - Updated the `AuthButton` component to display separate, clearly labeled buttons for "Login with GitHub" and "Login with Google".
   - Created a new `login` variant for shadcn/ui Buttons to provide distinct, inverted styling for auth actions, improving visual hierarchy.

2. Header UI Refactor (`SettingsDropdown`):
   - De-cluttered the main header by grouping secondary actions (Language Switcher, Theme Toggle, Code Generation, Manage Shares) into a new `SettingsDropdown` component, accessible via a single "Settings" (cog) icon.
   - Refactored child components (`LanguageSwitcher`, `ThemeToggle`, etc.) to render as clean, consistent items within the `DropdownMenu`.
   - Replaced the duplicate "Settings" icon for "Environments" with a more semantic "Layers" icon to avoid user confusion.

3. General UX & Style Improvements:
   - Added descriptive tooltips to all icon-only buttons in the header for improved accessibility.
   - Fixed a bug where clicking an input field within an accordion (`CollectionsSidebar`) would toggle the accordion state. Click event propagation is now correctly stopped.
   - Implemented resource limits for Environments and Variables, including UI counters and toast notifications to prevent overuse and inform the user.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,8 @@
         "title": "Nextman API"
     },
     "auth": {
-        "login_button": "Login with GitHub",
+        "login_button_github": "Login with GitHub",
+        "login_button_google": "Login with Google",
         "logout_button": "Log out"
     },
     "tabs": {
@@ -127,7 +128,8 @@
     },
     "common": {
         "cancel": "Cancel",
-        "delete": "Delete"
+        "delete": "Delete",
+        "settings": "Settings"
     },
     "language_switcher": {
         "english": "English",
